safari layout issue fix

--- a/imports/ui/main/header.scss
+++ b/imports/ui/main/header.scss
@@ -3,12 +3,12 @@
 }
 
 .navbar-logo {
-  margin-top: 0px;
-  width: 25%;
+  margin-top: -5px;
+  width: 30px;//25%;
 }
 
 .navbar-brand {
-  margin-right: -6rem !important;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  margin-right: 0rem !important;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
